# clp_cnns

./: README.md  pyproject.toml  test.py  train.py
core/: trainer.py
datasets/: Dataloader.py
models/: cnn.py
utils/: func.py
